--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "firebase": "^11.9.0",
     "immutable": "^5.1.2",
     "lodash.debounce": "^4.0.8",
     "react": "^19.0.0",
